correct error on mobile

--- a/_scss/_custom.scss
+++ b/_scss/_custom.scss
@@ -468,7 +468,6 @@ a:hover{
 
 #blogHeader{
 	padding: 195px 30px 65px;
-	background-image: url("../img/bg-defauolt.jpg");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-color: #0000;
@@ -503,12 +502,14 @@ a:hover{
 
 @media only screen and (max-width: 400px) {
    .bgplyer{
-    width: 100%;
-    max-height: 100%; /* To compensate for mobile browser address bar space */ 
-    background-size: fill;        
-    -webkit-background-size: fill; 
-    -moz-background-size: fill ; 
-    -o-background-size: fill; 
+    height: 60vh;
+ 
+    background: no-repeat top center fixed; 
+    background-color: #0000;
+    -webkit-background-size:auto 70%;
+      -moz-background-size:auto 70%;
+      -o-background-size:auto 70%;
+      background-size:auto 70%;
     }
 }
 
